manifests/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - image: postgres:15-alpine
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data
      volumes:
        - name: db-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: db

# apiVersion: v1
# kind: Service
# metadata:
#   name: db
#   labels:
#     app: db
# spec:
#   ports:
#     - port: 5432
#   selector:
#     app: db
#   clusterIP: None
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: db-pv-claim
#   labels:
#     app: db
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 8Gi
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: db
#   labels:
#     app: db
# spec:
#   selector:
#     matchLabels:
#       app: db
#   strategy:
#     type: Recreate
#   template:
#     metadata:
#       labels:
#         app: db
#     spec:
#       containers:
#         - image: postgres:15-alpine
#           name: db
#           env:
#             - name: POSTGRES_USER
#               value: postgres
#             - name: POSTGRES_PASSWORD
#               value: postgres
#           ports:
#             - containerPort: 5432
#               name: postgres
#           volumeMounts:
#             - name: db-persistent-storage
#               mountPath: /var/lib/postgresql/data
#       volumes:
#         - name: db-persistent-storage
#           persistentVolumeClaim:
#             claimName: db-pv-claim
