manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /vote
            backend:
              service:
                name: vote-service
                port:
                  number: 80
          - pathType: Prefix
            path: /result
            backend:
              service:
                name: result-service
                port:
                  number: 80
